<resources>
    <string name="app_name">Grocery List</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_first_item">Add First Item</string>
    <string name="enter_groceries">Enter Grocery Item</string>
    <string name="hint_item">Enter Item</string>
    <string name="enter_qty">Enter Qty</string>
    <string name="save">Save</string>
    <string name="title_activity_list">My List</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="edit_item">Edit Grocery Item</string>
</resources>