<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/layout_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:padding="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:textSize="18sp"
                android:textStyle="italic"
                android:text="@string/enter_groceries"
                android:layout_centerHorizontal="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/groceryItem"
                android:layout_below="@id/title"
                android:hint="@string/hint_item" />
            
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/groceryQty"
                android:layout_marginTop="15dp"
                android:layout_below="@id/groceryItem"
                android:hint="@string/enter_qty"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/saveButton"
                android:textStyle="bold"
                android:background="@color/colorAccent"
                android:layout_marginTop="5dp"
                android:textColor="@android:color/white"
                android:layout_below="@id/groceryQty"
                android:text="@string/save" />



        </RelativeLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>